bug-254: z-index adjustment to toast

--- a/Product/WebApp/client/scss/components/_toast.scss
+++ b/Product/WebApp/client/scss/components/_toast.scss
@@ -1,4 +1,8 @@
-﻿#toast-container > div {
+﻿#toast-container {
+    z-index: 2147483646;
+}
+
+#toast-container > div {
     opacity: 1;
 }
 
